1.15.11
-------
(RB=290169)
PegasusPlugin: Deprecate compatibility level OFF and short-circuit to IGNORE.

1.15.10
-------
(RB=289792)
Fix scaladoc extractor to not throw an exception on a undocumented param.

(RB=290416)
Fixing D2 client to log only the non-sensitive parts of the request.

1.15.9
------
(RB=288605)
Fix bug in scaladoc provider where class and object of same were not disambiguated between correctly.

(RB=289001)
Fix bug where when maven artifacts are not properly depended on using gradle 1.9+.  This was because
the maven pom contained test and compile scopes for the same artifact.  The fix is to not publish the
test artifact dependencies into maven poms.

1.15.8
------
(RB=288441)
Relax master colo check in D2Config if enableSymlink is set.

(RB=288471)
Fix a bug where an exists watch gets incorrectly disabled when it's still valid.

(RB=288481)
Add symlinkAware option in ZKPersistentConnection.

1.15.7
------
(RB=285003)
Fix bug in example generator where query params of complex types are incorrectly
rendered as stringified data maps with { and } instead of the correct URI
representation.

(RB=282064)
Removing X-RestLi-Type and X-RestLi-Sub-Type headers.

1.15.6
------
(RB=284603)
Add the IP address to RequestContext.

(RB=285727)
Use the correct markUp function for ZooKeeperAnnouncers

1.15.5
------
(RB=276294)
Use TestNG listener to fail skipped tests rather than ignoring them.
Upgrade quickstart example to support Gradle 1.9+.

(RB=202580)
Update restli-int-test data provider to avoid suppressing the rawtypes warning.

(RB=283790)
Assume that the server is using the baseline protocol version.

(RB=283477)
Add support for URI specific properties to D2.

(RB=283854)
Replace dependency of google-collections with guava.
Remove usage of Gradle internal API.

1.15.4
------
(RB=275644)
ComplexResourceKey now tries to create key/param record templates using schemas
from the key spec

1.15.3
------
(RB=276699)